--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -63,217 +63,12 @@
                     android:padding="10dp">
 
 
-                    <LinearLayout
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_categories"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"
-                        android:layout_marginBottom="10dp">
+                        android:padding="16dp" />
 
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="4dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:gravity="center"
-                                android:padding="10dp">
-
-                                <androidx.appcompat.widget.AppCompatImageView
-                                    android:id="@+id/phonesImage"
-                                    android:layout_width="80dp"
-                                    android:layout_height="80dp" />
-
-                                <TextView
-                                    android:id="@+id/phonesTextTv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Smart Phones"
-                                    android:textSize="16sp"
-                                    android:textStyle="bold"
-                                    android:gravity="center" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="4dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:gravity="center"
-                                android:padding="10dp">
-
-                                <androidx.appcompat.widget.AppCompatImageView
-                                    android:id="@+id/laptopImage"
-                                    android:layout_width="80dp"
-                                    android:layout_height="80dp" />
-
-                                <TextView
-                                    android:id="@+id/laptopTextTv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Laptops"
-                                    android:textSize="16sp"
-                                    android:textStyle="bold"
-                                    android:gravity="center" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"
-                        android:layout_marginBottom="10dp">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="4dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:gravity="center"
-                                android:padding="10dp">
-
-                                <androidx.appcompat.widget.AppCompatImageView
-                                    android:id="@+id/MensWearImage"
-                                    android:layout_width="80dp"
-                                    android:layout_height="80dp" />
-
-                                <TextView
-                                    android:id="@+id/mensWearTv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Men's Wear"
-                                    android:textSize="16sp"
-                                    android:textStyle="bold"
-                                    android:gravity="center" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="4dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:gravity="center"
-                                android:padding="10dp">
-
-                                <androidx.appcompat.widget.AppCompatImageView
-                                    android:id="@+id/womensWearImage"
-                                    android:layout_width="80dp"
-                                    android:layout_height="80dp" />
-
-                                <TextView
-                                    android:id="@+id/womensWearTv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Women's Wear"
-                                    android:textSize="16sp"
-                                    android:textStyle="bold"
-                                    android:gravity="center" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center"
-                        android:layout_marginBottom="10dp">
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="4dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:gravity="center"
-                                android:padding="10dp">
-
-                                <androidx.appcompat.widget.AppCompatImageView
-                                    android:id="@+id/kidsWearImage"
-                                    android:layout_width="80dp"
-                                    android:layout_height="80dp" />
-
-                                <TextView
-                                    android:id="@+id/kidsWearTv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Kids's Wear"
-                                    android:textSize="16sp"
-                                    android:textStyle="bold"
-                                    android:gravity="center" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_margin="8dp"
-                            app:cardCornerRadius="8dp"
-                            app:cardElevation="4dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:gravity="center"
-                                android:padding="10dp">
-
-                                <androidx.appcompat.widget.AppCompatImageView
-                                    android:id="@+id/groceryImage"
-                                    android:layout_width="80dp"
-                                    android:layout_height="80dp" />
-
-                                <TextView
-                                    android:id="@+id/groceryTextView"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="Grocery"
-                                    android:textSize="16sp"
-                                    android:textStyle="bold"
-                                    android:gravity="center" />
-                            </LinearLayout>
-                        </androidx.cardview.widget.CardView>
-                    </LinearLayout>
 
 
 
